--- a/app/src/main/res/layout/row_item_sync_results.xml
+++ b/app/src/main/res/layout/row_item_sync_results.xml
@@ -20,8 +20,7 @@
             android:layout_width="20dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="5dp"
-            tools:ignore="ContentDescription"
-            />
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/syncResultsStatusIcon"
@@ -31,22 +30,24 @@
             tools:ignore="ContentDescription"
             />
 
-        <TextView android:id="@+id/syncResultsLine1"
+        <TextView
+            android:id="@+id/syncResultsLine1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textAppearance="?attr/textAppearanceListItemSecondary"
-            android:maxLines="1"
             android:ellipsize="end"
             android:gravity="start|center_vertical"
-        />
+            android:maxLines="1"
+            android:textAppearance="?attr/textAppearanceListItemSecondary"
+            android:textSize="24sp" />
     </LinearLayout>
 
-    <TextView android:id="@+id/syncResultsLine2"
+    <TextView
+        android:id="@+id/syncResultsLine2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceListItemSecondary"
-        android:maxLines="1"
-        android:ellipsize="end"
         android:layout_marginStart="25dp"
-    />
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAppearance="?attr/textAppearanceListItemSecondary"
+        android:textSize="24sp" />
 </LinearLayout>
