--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
     </group>
     <group android:id="@+id/wifiSettingsGroup">
         <item android:id="@+id/wifiSyncSettingsMenuItem" app:showAsAction="never" android:title="@string/menuSyncSettings" />
+        <item
+            android:id="@+id/fullScanRegistMediaStoreMenuItem"
+            android:onClick="onFullScanMenuItemClick"
+            android:title="@string/menuFullScanFiles"
+            app:showAsAction="never" />
     </group>
     <group android:id="@+id/wifiErrorLogGroup">
         <item android:id="@+id/wifiSyncLogMenuItem" app:showAsAction="never" android:title="@string/menuWifiSyncLog" />
