--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,14 +190,13 @@
         android:id="@+id/syncServerStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginBottom="20dp"
         android:text="@string/errorServerNotFound"
         android:textColor="@color/colorError"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/syncPreviewButton" />
+        app:layout_constraintBottom_toTopOf="@+id/syncPreviewButton"
+        tools:layout_editor_absoluteX="15dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/syncHalfWidthGuideline"
