--- a/app/src/main/res/layout/activity_sync_status.xml
+++ b/app/src/main/res/layout/activity_sync_status.xml
@@ -61,18 +61,17 @@
 
     <TextView
         android:id="@+id/syncProgressMessage"
-        android:layout_width="384dp"
-        android:layout_height="115dp"
+        android:layout_width="360dp"
+        android:layout_height="150dp"
         android:contextClickable="false"
-        android:cursorVisible="false"
         android:ellipsize="end"
-        android:maxLines="3"
-        android:paddingHorizontal="5dp"
+        android:maxLines="5"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.73"
-        tools:layout_editor_absoluteX="15dp" />
+        app:layout_constraintVertical_bias="0.79" />
 
     <Button
         android:id="@+id/stopSyncButton"
