--- a/app/src/main/res/layout/activity_playlist_sync.xml
+++ b/app/src/main/res/layout/activity_playlist_sync.xml
@@ -114,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp"
-            android:tint="@color/colorButtonTextEnabled"
+            app:tint="@color/colorButtonTextEnabled"
             android:src="@android:drawable/ic_popup_sync"
             tools:ignore="ContentDescription"
         />
