--- a/app/src/main/res/layout/activity_sync_preview.xml
+++ b/app/src/main/res/layout/activity_sync_preview.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:minHeight="60dp"
         android:minWidth="60dp"
+        android:theme="@style/AppTheme"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +35,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.2"
     />
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorButtonNormal"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     <ListView
         android:id="@+id/previewResults"
         android:layout_width="match_parent"
@@ -43,7 +55,7 @@
         android:layout_marginBottom="5dp"
         android:scrollbars="vertical"
         android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
         app:layout_constraintBottom_toTopOf="@+id/previewErrorMessage"
     />
 
@@ -71,6 +83,7 @@
         android:textSize="15sp"
         android:text="@string/syncPreviewIgnoreErrors"
         android:checked="true"
+        android:theme="@style/AppTheme"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/proceedSyncButton"
         />
@@ -94,8 +107,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="8dp"
-            android:tint="@color/colorButtonTextEnabled"
             android:src="@android:drawable/ic_popup_sync"
+            app:tint="@color/colorButtonTextEnabled"
             tools:ignore="ContentDescription"
         />
 
