--- a/app/src/main/res/layout/activity_sync_status.xml
+++ b/app/src/main/res/layout/activity_sync_status.xml
@@ -5,7 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kim.tkland.musicbeewifisync.SyncResultsStatusActivity">
-
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorButtonNormal"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     <ProgressBar
         android:id="@+id/syncProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -16,6 +27,7 @@
         android:indeterminate="false"
         android:max="100"
         android:progress="0"
+        android:theme="@style/AppTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,12 +59,14 @@
 
     <ProgressBar
         android:id="@+id/syncWaitIndicator"
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:minWidth="60dp"
         android:minHeight="60dp"
+        android:theme="@style/AppTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -61,17 +75,17 @@
 
     <TextView
         android:id="@+id/syncProgressMessage"
-        android:layout_width="360dp"
-        android:layout_height="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_marginHorizontal="25dp"
         android:contextClickable="false"
         android:ellipsize="end"
-        android:maxLines="5"
+        android:maxLines="7"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.79" />
+        app:layout_constraintVertical_bias="0.79"
+        tools:layout_editor_absoluteX="50dp" />
 
     <Button
         android:id="@+id/stopSyncButton"
