--- a/app/src/main/res/layout/activity_view_error_log.xml
+++ b/app/src/main/res/layout/activity_view_error_log.xml
@@ -6,16 +6,52 @@
     android:layout_height="match_parent"
     tools:context="kim.tkland.musicbeewifisync.ViewErrorLogActivity">
 
-    <Button
-        android:id="@+id/copyToClipboardButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:text="@string/logCopyClipboard"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:onClick="copyToClipboardButton_Click"
-    />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginTop="4dp"
+            android:background="?attr/colorButtonNormal"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container_for_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/viewLogTitle"
+                    style="@style/Widget.AppCompat.Toolbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:scrollbars="vertical"
+                    android:text="@string/menuWifiSyncLog"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <Button
+                    android:id="@+id/copyToClipboardButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="copyToClipboardButton_Click"
+                    android:text="@string/logCopyClipboard"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.Toolbar>
+
     <TextView
         android:id="@+id/errorText"
         android:layout_width="match_parent"
@@ -27,7 +63,7 @@
         android:gravity="top"
         android:textSize="16sp"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/copyToClipboardButton"
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-    />
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
