--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:verticalScrollbarPosition="right"
-    tools:context="kim.tkland.musicbeewifisync.SettingsActivity" >
+    tools:context="kim.tkland.musicbeewifisync.SettingsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
@@ -89,8 +89,8 @@
             android:layout_height="69dp"
             android:layout_marginTop="6dp"
             android:text="@string/settingsStorageInternal"
-            android:theme="@style/AppTheme"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:theme="@style/AppTheme" />
 
         <RadioButton
             android:id="@+id/settingsStorageSdCard1"
@@ -104,7 +104,7 @@
             app:layout_constraintTop_toBottomOf="parent" />
 
     </RadioGroup>
-
+<!--
     <Button
         android:id="@+id/settingsGrantAccessButton"
         android:layout_width="wrap_content"
@@ -115,19 +115,20 @@
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="@+id/settingsStorageOptions"
         app:layout_constraintTop_toBottomOf="@+id/settingsStorageOptions" />
-
+-->
     <CheckBox
         android:id="@+id/settingsDebugMode"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:text="@string/settingsDebugMode"
         android:textSize="16sp"
-        android:visibility="invisible"
         android:theme="@style/AppTheme"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settingsGrantAccessButton" />
+        app:layout_constraintTop_toBottomOf="@+id/settingsStorageOptions" />
 
     <TextView
         android:id="@+id/settingsLocateServerNoConfig"
@@ -170,7 +171,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settingsDeviceNamePrompt" />
-
+<!--
     <ProgressBar
         android:id="@+id/settingsWaitIndicator"
         android:layout_width="wrap_content"
@@ -179,25 +180,26 @@
         android:layout_centerVertical="true"
         android:minWidth="60dp"
         android:minHeight="60dp"
-        android:visibility="invisible"
         android:theme="@style/AppTheme"
+        android:visibility="invisible"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settingsDeviceName"
         app:layout_constraintVertical_bias="0.391" />
-
+-->
     <Button
         android:id="@+id/locateServerButton"
         android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:layout_marginBottom="4dp"
         android:background="@color/colorButtonBackground"
         android:onClick="onLocateServerButton_Click"
         android:text="@string/settingsLocate"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/colorButtonTextEnabled"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
