--- a/app/src/main/res/layout/activity_sync_status.xml
+++ b/app/src/main/res/layout/activity_sync_status.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kim.tkland.musicbeewifisync.SyncResultsStatusActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
@@ -17,34 +18,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <ProgressBar
         android:id="@+id/syncProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:indeterminate="false"
         android:max="100"
         android:progress="0"
         android:theme="@style/AppTheme"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
         app:layout_constraintVertical_bias="0.175" />
 
     <TextView
         android:id="@+id/syncCompletionStatusMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:textSize="16sp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintBottom_toTopOf="@+id/stopSyncButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/syncProgressBar"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ListView
         android:id="@+id/syncFailedResults"
@@ -55,6 +62,8 @@
         android:scrollbars="vertical"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/stopSyncButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/syncCompletionStatusMessage" />
 
     <ProgressBar
@@ -92,11 +101,13 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="58dp"
+        android:layout_marginBottom="4dp"
         android:background="@color/colorButtonBackground"
         android:onClick="onStopSyncButton_Click"
         android:text="@string/syncStop"
         android:textColor="@color/colorButtonTextEnabled"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
